Fix line height (broken on Zukunftsentscheid)

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -20,7 +20,7 @@ header.masthead {
     .intro-heading {
       font-size: 40px;
       font-weight: 600;
-      line-height: 20px;
+      line-height: 50px;
       margin-bottom: 25px;
       @include heading-font;
     }
